# nordic-generic-01

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  DockerfileNrf  Makefile  README.md  nrf52832_mdk.overlay  prj.conf
.github/workflows/: deploy.yml  main.yml  test.yml
actions/: Dockerfile
proj-actions/: Dockefile  Dockerfile  action.yml  runchecks.sh
src/: main.c  oled.c  test.c
